fixed side to side scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -209,7 +209,7 @@ menu {
 .Footer-container {
   background-color: #fffbfb;
   height: 19rem;
-  width: 100vw;
+  width: 100%;
 }
 
 .footer-heading {
